# styledex-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
copycat/: __init__.py  capture.py  server.py  store.py
copycat/skills/copycat/: SKILL.md
copycat/skills/copycat/references/: apply-guidelines.md  capture-guidelines.md  design-md-guidelines.md  legal-boundaries.md  playwright.md
examples/llm-next-scaffold/: package-lock.json  package.json
examples/llm-next-scaffold/src/app/: globals.css  layout.tsx  page.tsx
src/styledex_mcp/: __init__.py  capture.py  server.py  store.py
tests/: test_capture.py  test_server.py  test_skill_package.py  test_store.py
