[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "styledex-mcp"
version = "0.1.0"
description = "Thin MCP server for managing StyleDex design library artifacts."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "playwright", "design-systems", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "mcp>=1.12.4",
  "playwright>=1.49"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10"
]

[project.scripts]
styledex-mcp = "styledex_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/styledex_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
