[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copycat-mcp"
version = "0.1.0"
description = "Thin MCP server for managing Copycat design library artifacts."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "playwright", "design-systems", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "mcp>=1.12.4",
  "playwright>=1.49"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10"
]

[project.scripts]
copycat-mcp = "copycat.server:main"

[tool.hatch.build.targets.wheel]
packages = ["copycat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["copycat", "tests"]
